# ChannelKit

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
cpp/include/channel/: bsc.hpp
cpp/include/codecs/: custom.cpp  custom.hpp  encoder.hpp  hamming.cpp  hamming.hpp  ldpc.hpp
cpp/include/utils/: io_ops.hpp  matrix.hpp  message.hpp  node.hpp
cpp/src/channel/: bsc.cpp
cpp/src/codecs/: custom.cpp  hamming.cpp  ldpc.cpp
cpp/src/utils/: matrix.cpp  message.cpp  node.cpp
cpp/test/: testDoubleBitError.cpp  testHamming.cpp  test_hamming
data/: lab1.csv
labs/: lab1.cpp  plot_lab1.py
labs/lab1/: lab1.cpp
